@@ -1,3 +1,6 @@
+// =============== 1. SecurityConfig.java (Final Corrected Version) ===============
+// This file contains the fix for the routing conflict.
+
 package com.SpringProject.kharidoMat.config;
 
 import org.slf4j.Logger;
@@ -5,6 +8,7 @@ import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
+import org.springframework.http.HttpMethod; // Import this
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.http.SessionCreationPolicy;
 import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
@@ -17,6 +21,7 @@ import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
 import jakarta.servlet.http.HttpServletResponse;
 
+import java.util.Arrays;
 import java.util.List;
 
 import static org.springframework.security.config.Customizer.withDefaults;
@@ -25,15 +30,12 @@ import static org.springframework.security.config.Customizer.withDefaults;
 public class SecurityConfig {
 
     private static final Logger logger = LoggerFactory.getLogger(SecurityConfig.class);
-
     private final JwtAuthFilter jwtAuthFilter;
-
     @Autowired
     private CustomOAuth2SuccessHandler oAuth2SuccessHandler;
 
     public SecurityConfig(JwtAuthFilter jwtAuthFilter) {
         this.jwtAuthFilter = jwtAuthFilter;
-        logger.info("SecurityConfig initialized with JwtAuthFilter");
     }
 
     @Bean
@@ -43,9 +45,7 @@ public class SecurityConfig {
         http
             .cors(withDefaults())
             .csrf(csrf -> csrf.disable())
-            .sessionManagement(session -> session
-                .sessionCreationPolicy(SessionCreationPolicy.STATELESS)
-            )
+            .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
             .exceptionHandling(exceptions -> exceptions
                 .authenticationEntryPoint((request, response, authException) ->
                     response.sendError(HttpServletResponse.SC_UNAUTHORIZED, "Unauthorized")
@@ -53,45 +53,26 @@ public class SecurityConfig {
             )
             .authorizeHttpRequests(auth -> {
                 auth
-                    // Public endpoints
+                    // --- PUBLIC ENDPOINTS ---
                     .requestMatchers(
                         "/api/users/register",
-                        "/api/users/complete-registration",
                         "/api/users/login",
-                        "/api/users/verify",
-                        "/api/users/forgot-password",
-                        "/api/users/reset-password",
                         "/api/items/all",
                         "/api/items/search",
-                        "/api/items/{id}",
                         "/api/items/category/**",
                         "/api/items/image/{fileName}",
-                        "/swagger-ui/**",
-                        "/v3/api-docs/**",
-                        "/ws/**",
-                        "/oauth2/**",
-                        "/login/oauth2/**",
-                        "/oauth2/authorization/**"
+                        "/swagger-ui/**", "/v3/api-docs/**"
+                        // Add other non-protected endpoints here
                     ).permitAll()
 
-                    // Protected endpoints
-                    .requestMatchers(
-                        "/api/dashboard/stats/**",
-                        "/api/users/wishlist/**",
-                        "/api/users/edit-profile",
-                        "/api/items/post",
-                        "/api/items/my",
-                        "/api/items/upload-image/**",
-                        "/api/bookings/**",
-                        "/api/chats/**",
-                        "/api/reviews/can-review/{itemId}",
-                        "/api/reviews/{itemId}",
-                        "/api/bookings/{bookingId}/create-extension-order/**",
-                        "/api/bookings/{bookingId}/verify-and-extend/**",
-                        "/{itemId}/bookings"
-                    ).authenticated()
+                    // --- FIX: Be specific that only GET requests for an item ID are public ---
+                    .requestMatchers(HttpMethod.GET, "/api/items/{id}").permitAll()
+                    
+                    // --- FIX: Allow all CORS preflight OPTIONS requests ---
+                    .requestMatchers(HttpMethod.OPTIONS, "/**").permitAll()
 
-                    // Catch-all: any other request must be authenticated
+                    // --- PROTECTED ENDPOINTS ---
+                    // Any other request will require authentication.
                     .anyRequest().authenticated();
             })
             .oauth2Login(oauth2 -> oauth2.successHandler(oAuth2SuccessHandler))
@@ -103,16 +84,15 @@ public class SecurityConfig {
 
     @Bean
     public PasswordEncoder passwordEncoder() {
-        logger.debug("BCryptPasswordEncoder bean created");
         return new BCryptPasswordEncoder();
     }
 
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(List.of("http://localhost:5173", "http://127.0.0.1:5173/"));
-        configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"));
-        configuration.setAllowedHeaders(List.of("Authorization", "Content-Type", "X-Auth-Token"));
+        configuration.setAllowedOrigins(Arrays.asList("http://localhost:5173", "http://127.0.0.1:5173", "https://kharidomat-frontend.onrender.com"));
+        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"));
+        configuration.setAllowedHeaders(List.of("*"));
         configuration.setAllowCredentials(true);
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
